--- a/application/config
+++ b/application/config
@@ -3,14 +3,5 @@ Below is the config for app server to connect student DB
 <Resource name="jdbc/TestDB" auth="Container" type="javax.sql.DataSource" maxTotal="100" maxIdle="30" maxWaitMillis="10000" username="student" password="student@1" driverClassName="com.mysql.jdbc.Driver" url="jdbc:mysql://10.142.0.22:3306/studentapp"/>
 
 SELINUX
-sudo sestatus
-
-sudo yum install policycoreutils-python-utils
-
-sudo grep nginx /var/log/audit/audit.log | grep denied
-
-sudo audit2allow -a -M nginx_tomcat_connect
-
-sudo semodule -i nginx_tomcat_connect.pp
-sudo systemctl restart nginx
-sudo systemctl restart tomcat
+yum install policycoreutils-python-utils -y
+setsebool -P httpd_can_network_connect 1
